objects/Retail_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Air_Conditioning__c</fullName>
        <label>Air Conditioning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Window Unit</fullName>
                </value>
                <value>
                    <fullName>Ceiling Fan</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appliances_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appliances Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floors__c</fullName>
        <label>Floors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Furniture_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Furniture Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Garage__c</fullName>
        <label>Garage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attached</fullName>
                </value>
                <value>
                    <fullName>Detached</fullName>
                </value>
                <value>
                    <fullName>Assigned Parking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heating__c</fullName>
        <label>Heating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forced Air</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Laundry__c</fullName>
        <label>Laundry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-unit hook-ups</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>N__c</fullName>
        <label>Number of Parking Spaces</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <label>Number of Bathrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Bedrooms__c</fullName>
        <label>Number of Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pets_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pets Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rental_Unit_Name__c</fullName>
        <label>Rental Unit Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total Square feet</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilities_Included__c</fullName>
        <label>Utilities Included</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Water</fullName>
                </value>
                <value>
                    <fullName>Hot water</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
                <value>
                    <fullName>Sewage</fullName>
                </value>
                <value>
                    <fullName>Trash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rental Unit</label>
    <nameField>
        <label>Retail Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rental Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>